--- a/CodeNameFive/Controller/Pickup/CardViewController.xib
+++ b/CodeNameFive/Controller/Pickup/CardViewController.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -26,39 +27,26 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qZN-Of-IAe">
-                    <rect key="frame" x="0.0" y="70" width="375" height="742"/>
+                    <rect key="frame" x="0.0" y="80" width="375" height="732"/>
+                    <subviews>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DHx-f6-GSK">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="732"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        </tableView>
+                    </subviews>
                     <color key="backgroundColor" red="0.96862745100000003" green="0.80392156859999997" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="DHx-f6-GSK" firstAttribute="leading" secondItem="qZN-Of-IAe" secondAttribute="leading" id="5DP-W7-ooC"/>
+                        <constraint firstItem="DHx-f6-GSK" firstAttribute="top" secondItem="qZN-Of-IAe" secondAttribute="top" id="FR7-X5-EPg"/>
+                        <constraint firstAttribute="bottom" secondItem="DHx-f6-GSK" secondAttribute="bottom" id="HhQ-GL-SZe"/>
+                        <constraint firstAttribute="trailing" secondItem="DHx-f6-GSK" secondAttribute="trailing" id="TSO-aQ-P9Z"/>
+                    </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r6F-YW-eeF">
-                    <rect key="frame" x="0.0" y="-20" width="375" height="90"/>
+                    <rect key="frame" x="0.0" y="-20" width="375" height="100"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zJO-XV-NL4">
-                            <rect key="frame" x="157" y="20" width="61" height="7"/>
-                            <color key="backgroundColor" systemColor="scrollViewTexturedBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="7" id="5UW-sC-L8k"/>
-                                <constraint firstAttribute="width" constant="61" id="RBz-3m-ETi"/>
-                            </constraints>
-                        </view>
-                        <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5Ey-Rq-xgh">
-                            <rect key="frame" x="166" y="43" width="42" height="41"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ZY-uo-9q5">
-                                    <rect key="frame" x="0.0" y="0.0" width="42" height="19.5"/>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pla-Te-Pwv">
-                                    <rect key="frame" x="0.0" y="24.5" width="42" height="16.5"/>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                    <color key="textColor" name="secondaryColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                        </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgO-Bt-Mxb">
-                            <rect key="frame" x="339" y="44" width="16" height="31"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgO-Bt-Mxb">
+                            <rect key="frame" x="339" y="42" width="16" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="16" id="69q-IL-rAb"/>
                                 <constraint firstAttribute="width" constant="16" id="V6F-cN-qy6"/>
@@ -66,13 +54,54 @@
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                             <state key="normal" title="Button"/>
                         </button>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="5Ey-Rq-xgh">
+                            <rect key="frame" x="166.5" y="8" width="42" height="84"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ZY-uo-9q5">
+                                    <rect key="frame" x="0.0" y="0.0" width="42" height="19.5"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pla-Te-Pwv">
+                                    <rect key="frame" x="0.0" y="21.5" width="42" height="19.5"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0il-Yb-myI">
+                                    <rect key="frame" x="0.0" y="43" width="42" height="19.5"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxi-OG-xkb">
+                                    <rect key="frame" x="0.0" y="64.5" width="42" height="19.5"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                    <color key="textColor" name="secondaryColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hph-vD-ZQP">
+                            <rect key="frame" x="20" y="42" width="16" height="16"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="16" id="Nyj-Se-uGO"/>
+                                <constraint firstAttribute="height" constant="16" id="XkC-9a-UI4"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                            <state key="normal" image="ic_closed_place_waypoint_alert_32pt.png"/>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="zJO-XV-NL4" firstAttribute="centerX" secondItem="r6F-YW-eeF" secondAttribute="centerX" id="4t4-pW-5yv"/>
+                        <constraint firstItem="5Ey-Rq-xgh" firstAttribute="centerY" secondItem="r6F-YW-eeF" secondAttribute="centerY" id="5Mq-zk-V4P"/>
                         <constraint firstAttribute="trailing" secondItem="dgO-Bt-Mxb" secondAttribute="trailing" constant="20" id="82f-yP-c9k"/>
-                        <constraint firstAttribute="height" constant="90" id="I14-5u-1pH"/>
-                        <constraint firstItem="zJO-XV-NL4" firstAttribute="top" secondItem="r6F-YW-eeF" secondAttribute="top" constant="20" id="zKI-i1-LaT"/>
+                        <constraint firstAttribute="height" constant="100" id="I14-5u-1pH"/>
+                        <constraint firstItem="hph-vD-ZQP" firstAttribute="leading" secondItem="r6F-YW-eeF" secondAttribute="leading" constant="20" id="J3N-Gc-S8M"/>
+                        <constraint firstItem="hph-vD-ZQP" firstAttribute="centerY" secondItem="5Ey-Rq-xgh" secondAttribute="centerY" id="MR6-dv-WW5"/>
+                        <constraint firstItem="dgO-Bt-Mxb" firstAttribute="centerY" secondItem="5Ey-Rq-xgh" secondAttribute="centerY" id="YdE-16-zbO"/>
+                        <constraint firstItem="5Ey-Rq-xgh" firstAttribute="centerX" secondItem="r6F-YW-eeF" secondAttribute="centerX" id="cub-RX-8kC"/>
                     </constraints>
                 </view>
             </subviews>
@@ -88,15 +117,16 @@
                 <constraint firstItem="r6F-YW-eeF" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="pZ1-IC-o7H"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="130.40000000000001" y="73.763118440779621"/>
+            <point key="canvasLocation" x="231.19999999999999" y="77.361319340329842"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_closed_place_waypoint_alert_32pt.png" width="32" height="32"/>
         <namedColor name="secondaryColor">
             <color red="0.50999999046325684" green="0.5220000147819519" blue="0.5220000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="scrollViewTexturedBackgroundColor">
-            <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
