--- a/CodeNameFive/View/Profile.storyboard
+++ b/CodeNameFive/View/Profile.storyboard
@@ -168,7 +168,7 @@
                                                 <constraint firstItem="1GJ-84-hiX" firstAttribute="centerY" secondItem="ZcQ-ta-YBr" secondAttribute="centerY" id="noh-hU-hQk"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
+                                        <color key="backgroundColor" name="cellColor"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -241,33 +241,30 @@
                         <sections>
                             <tableViewSection id="lSz-se-0R6">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="profileCell" id="RSR-hk-OkX" customClass="MainTableViewCell" customModule="CNF" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="18" width="414" height="87"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="profileCell" rowHeight="100" id="RSR-hk-OkX" customClass="MainTableViewCell" customModule="CNF" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="18" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RSR-hk-OkX" id="6Pd-58-G9D">
-                                            <rect key="frame" x="0.0" y="0.0" width="383" height="87"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="1SV-Fm-6NY">
-                                                    <rect key="frame" x="20" y="15" width="343" height="47"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="1SV-Fm-6NY">
+                                                    <rect key="frame" x="20" y="15" width="343" height="70"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bilal Khan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k3O-oN-iTw">
-                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="15"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="15" id="Hrp-uB-HJm"/>
-                                                            </constraints>
+                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="20"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sgies__@hotmail.co.uk" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cQG-vp-IFc">
-                                                            <rect key="frame" x="0.0" y="16" width="343" height="15"/>
+                                                            <rect key="frame" x="0.0" y="25" width="343" height="20"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                             <color key="textColor" name="secondaryColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xya-2b-tZ0">
-                                                            <rect key="frame" x="0.0" y="32" width="343" height="15"/>
+                                                            <rect key="frame" x="0.0" y="50" width="343" height="20"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                             <color key="textColor" name="secondaryColor"/>
                                                             <nil key="highlightedColor"/>
@@ -275,10 +272,11 @@
                                                     </subviews>
                                                 </stackView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ellipse" translatesAutoresizingMaskIntoConstraints="NO" id="NKI-KI-xzt">
-                                                    <rect key="frame" x="319" y="16.5" width="44" height="44"/>
+                                                    <rect key="frame" x="319" y="28" width="44" height="44"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="1SV-Fm-6NY" secondAttribute="bottom" constant="15" id="fAh-Rh-vfs"/>
                                                 <constraint firstAttribute="trailing" secondItem="1SV-Fm-6NY" secondAttribute="trailing" constant="20" id="fVA-r1-bbk"/>
                                                 <constraint firstItem="1SV-Fm-6NY" firstAttribute="top" secondItem="6Pd-58-G9D" secondAttribute="top" constant="15" id="hQg-5Y-Tsq"/>
                                                 <constraint firstAttribute="trailing" secondItem="NKI-KI-xzt" secondAttribute="trailing" constant="20" id="igQ-Qk-DQK"/>
@@ -286,14 +284,14 @@
                                                 <constraint firstItem="1SV-Fm-6NY" firstAttribute="leading" secondItem="6Pd-58-G9D" secondAttribute="leading" constant="20" id="uHO-lR-DX6"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
+                                        <color key="backgroundColor" name="cellColor"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
                             <tableViewSection id="u8l-1r-hpr">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="PaymentInfoCell" rowHeight="70" id="dVC-8E-jJD" customClass="MainTableViewCell" customModule="CNF" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="141" width="414" height="70"/>
+                                        <rect key="frame" x="0.0" y="154" width="414" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dVC-8E-jJD" id="JZz-c4-yV2">
                                             <rect key="frame" x="0.0" y="0.0" width="383" height="70"/>
@@ -324,30 +322,30 @@
                                                 <constraint firstItem="Vfq-hX-U33" firstAttribute="leading" secondItem="JZz-c4-yV2" secondAttribute="leading" constant="20" id="qF8-Xg-nVp"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
+                                        <color key="backgroundColor" name="cellColor"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
                             <tableViewSection id="HWy-aZ-Ad0">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="vehicalInfoCell" id="rhv-R7-Dbt" customClass="MainTableViewCell" customModule="CNF" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="247" width="414" height="70"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="vehicalInfoCell" rowHeight="70" id="rhv-R7-Dbt" customClass="MainTableViewCell" customModule="CNF" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="260" width="414" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rhv-R7-Dbt" id="EeD-Hi-G4v">
                                             <rect key="frame" x="0.0" y="0.0" width="383" height="70"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dUr-DZ-QgY">
-                                                    <rect key="frame" x="20" y="15" width="343" height="39.5"/>
+                                                    <rect key="frame" x="20" y="15" width="343" height="40"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment information" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I5e-l5-cxf">
-                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="19"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="19.5"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Review payment details" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GMV-gF-ZuC">
-                                                            <rect key="frame" x="0.0" y="20.5" width="343" height="19"/>
+                                                            <rect key="frame" x="0.0" y="21" width="343" height="19"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                             <color key="textColor" name="secondaryColor"/>
                                                             <nil key="highlightedColor"/>
@@ -359,9 +357,10 @@
                                                 <constraint firstAttribute="trailing" secondItem="dUr-DZ-QgY" secondAttribute="trailing" constant="20" id="Dav-f2-IGU"/>
                                                 <constraint firstItem="dUr-DZ-QgY" firstAttribute="leading" secondItem="EeD-Hi-G4v" secondAttribute="leading" constant="20" id="JMF-I3-bhQ"/>
                                                 <constraint firstItem="dUr-DZ-QgY" firstAttribute="top" secondItem="EeD-Hi-G4v" secondAttribute="top" constant="15" id="d0h-L7-z4q"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="dUr-DZ-QgY" secondAttribute="bottom" constant="4" id="pSq-5O-Ncc"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
+                                        <color key="backgroundColor" name="cellColor"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -563,7 +562,7 @@
                                                 <constraint firstItem="oMG-dj-Sqx" firstAttribute="leading" secondItem="bEf-2C-PNm" secondAttribute="leading" constant="20" id="Kor-iF-LEe"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
+                                        <color key="backgroundColor" name="cellColor"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -594,20 +593,5 @@
         <namedColor name="tableCellColor">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="tableCellGroupedBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="tableCellGroupedBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="tableCellGroupedBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="tableCellGroupedBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="tableCellGroupedBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
